# focus_app

./: .gitignore  CLAUDE.md  README.md  SKILL.md  index.html  package.json  pnpm-lock.yaml
public/: reminder.html
src/: App.css  App.tsx  emojiList.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  models.rs  ws_relay.rs
src-tauri/src/commands/: ai_watch.rs  mod.rs  report.rs  tag.rs  task.rs  timeline.rs  water.rs
src-tauri/src/ssh/: mod.rs  process_tunnel.rs
src/components/: ReportDebug.tsx  TagManager.tsx  TaskManager.tsx  TimelineManager.tsx  TitleBar.tsx
src/pages/: AiWatchPage.tsx  DebugPage.tsx  FloatingBar.tsx  HomePage.tsx  ReportPage.tsx  TaskPage.tsx  WaterPage.tsx
src/pages/aiwatch/: MonitorWindow.tsx  ServerFormModal.tsx  ServerPanel.tsx  SessionPanel.tsx
