[package]
name = "hello-tauri"
version = "0.1.0"
description = "Tauri 2.0 + Ant Design React Demo"
authors = [""]
edition = "2021"

[lib]
name = "hello_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
windows = { version = "0.58", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
